--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ dependencies = [
     "aiohttp>=3.12.7",
     "confluent-kafka>=2.10.0",
     "flask>=3.1.1",
+    "httpx>=0.28.1",
     "nest-asyncio>=1.6.0",
+    "pyspark>=4.0.0",
+    "streamlit>=1.46.1",
     "uvloop>=0.21.0",
 ]
 
